@@ -1,9 +1,6 @@
 package de.bund.bva.isyfact.util.logging;
 
-import ch.qos.logback.classic.Level;
-import ch.qos.logback.classic.spi.ILoggingEvent;
-import ch.qos.logback.core.read.ListAppender;
-import org.slf4j.Marker;
+import static org.junit.jupiter.api.Assertions.*;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -13,7 +10,11 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 
-import static org.junit.Assert.assertTrue;
+import org.slf4j.Marker;
+
+import ch.qos.logback.classic.Level;
+import ch.qos.logback.classic.spi.ILoggingEvent;
+import ch.qos.logback.core.read.ListAppender;
 
 /**
  * Logback appender for usage in JUnit tests. Gathers events like normal appenders.
@@ -54,7 +55,7 @@ public class TestAppender extends ListAppender<ILoggingEvent> {
      * @return true, if event contains marker, else false.
      */
     private static boolean eventContainsMarker(ILoggingEvent event, String markerName, String markerValue) {
-        Marker rootmarker = event.getMarkerList().get(0);
+        Marker rootmarker = event.getMarkerList().getFirst();
 
         Stream<Marker> markers = StreamSupport.stream(Spliterators.spliteratorUnknownSize(rootmarker.iterator(),
                 Spliterator.ORDERED), false);
